crates/core/src/commands/snapshots/rustic_core__commands__forget__tests__keep-yearly10.snap
---
source: crates/core/src/commands/forget.rs
expression: result
---
ForgetResult([
  ("2016-01-18T12:02:03Z", true, [
    "yearly",
  ]),
  ("2016-01-12T21:08:03Z", false, []),
  ("2016-01-12T21:02:03Z", false, []),
  ("2016-01-09T21:02:03Z", false, []),
  ("2016-01-08T20:02:03Z", false, []),
  ("2016-01-07T10:02:03Z", false, []),
  ("2016-01-06T08:02:03Z", false, []),
  ("2016-01-05T09:02:03Z", false, []),
  ("2016-01-04T16:23:03Z", false, []),
  ("2016-01-04T12:30:03Z", false, []),
  ("2016-01-04T12:28:03Z", false, []),
  ("2016-01-04T12:24:03Z", false, []),
  ("2016-01-04T12:23:03Z", false, []),
  ("2016-01-04T11:23:03Z", false, []),
  ("2016-01-04T10:23:03Z", false, []),
  ("2016-01-03T07:02:03Z", false, []),
  ("2016-01-01T07:08:03Z", false, []),
  ("2016-01-01T01:03:03Z", false, []),
  ("2016-01-01T01:02:03Z", false, []),
  ("2015-11-22T10:20:30Z", true, [
    "yearly",
  ]),
  ("2015-11-21T10:20:30Z", false, []),
  ("2015-11-20T10:20:30Z", false, []),
  ("2015-11-18T10:20:30Z", false, []),
  ("2015-11-15T10:20:30Z", false, []),
  ("2015-11-13T10:20:30Z", false, []),
  ("2015-11-12T10:20:30Z", false, []),
  ("2015-11-10T10:20:30Z", false, []),
  ("2015-11-08T10:20:30Z", false, []),
  ("2015-10-22T10:20:31Z", false, []),
  ("2015-10-22T10:20:31Z", false, []),
  ("2015-10-22T10:20:30Z", false, []),
  ("2015-10-22T10:20:30Z", false, []),
  ("2015-10-20T10:20:30Z", false, []),
  ("2015-10-11T10:20:30Z", false, []),
  ("2015-10-10T10:20:30Z", false, []),
  ("2015-10-09T10:20:30Z", false, []),
  ("2015-10-08T10:20:30Z", false, []),
  ("2015-10-06T10:20:30Z", false, []),
  ("2015-10-05T10:20:30Z", false, []),
  ("2015-10-02T10:20:30Z", false, []),
  ("2015-10-01T10:20:30Z", false, []),
  ("2015-09-22T10:20:30Z", false, []),
  ("2015-09-20T10:20:30Z", false, []),
  ("2015-09-11T10:20:30Z", false, []),
  ("2015-09-10T10:20:30Z", false, []),
  ("2015-09-09T10:20:30Z", false, []),
  ("2015-09-08T10:20:30Z", false, []),
  ("2015-09-06T10:20:30Z", false, []),
  ("2015-09-05T10:20:30Z", false, []),
  ("2015-09-02T10:20:30Z", false, []),
  ("2015-09-01T10:20:30Z", false, []),
  ("2015-08-22T10:20:30Z", false, []),
  ("2015-08-21T10:20:30Z", false, []),
  ("2015-08-20T10:20:30Z", false, []),
  ("2015-08-18T10:20:30Z", false, []),
  ("2015-08-15T10:20:30Z", false, []),
  ("2015-08-13T10:20:30Z", false, []),
  ("2015-08-12T10:20:30Z", false, []),
  ("2015-08-10T10:20:30Z", false, []),
  ("2015-08-08T10:20:30Z", false, []),
  ("2014-11-22T10:20:30Z", true, [
    "yearly",
  ]),
  ("2014-11-21T10:20:30Z", false, []),
  ("2014-11-20T10:20:30Z", false, []),
  ("2014-11-18T10:20:30Z", false, []),
  ("2014-11-15T10:20:31Z", false, []),
  ("2014-11-13T10:20:31Z", false, []),
  ("2014-11-12T10:20:31Z", false, []),
  ("2014-11-10T10:20:31Z", false, []),
  ("2014-11-08T10:20:31Z", false, []),
  ("2014-10-22T10:20:31Z", false, []),
  ("2014-10-20T10:20:31Z", false, []),
  ("2014-10-11T10:20:31Z", false, []),
  ("2014-10-10T10:20:31Z", false, []),
  ("2014-10-09T10:20:31Z", false, []),
  ("2014-10-08T10:20:31Z", false, []),
  ("2014-10-06T10:20:31Z", false, []),
  ("2014-10-05T10:20:31Z", false, []),
  ("2014-10-02T10:20:31Z", false, []),
  ("2014-10-01T10:20:31Z", false, []),
  ("2014-09-22T10:20:30Z", false, []),
  ("2014-09-20T10:20:30Z", false, []),
  ("2014-09-11T10:20:30Z", false, []),
  ("2014-09-10T10:20:30Z", false, []),
  ("2014-09-09T10:20:30Z", false, []),
  ("2014-09-08T10:20:30Z", false, []),
  ("2014-09-06T10:20:30Z", false, []),
  ("2014-09-05T10:20:30Z", false, []),
  ("2014-09-02T10:20:30Z", false, []),
  ("2014-09-01T10:29:37Z", true, [
    "snapshot",
  ]),
  ("2014-09-01T10:28:37Z", false, [
    "snapshot",
  ]),
  ("2014-09-01T10:25:37Z", true, [
    "snapshot",
  ]),
  ("2014-09-01T10:20:30Z", false, []),
  ("2014-08-22T10:20:30Z", false, []),
  ("2014-08-21T10:20:30Z", false, []),
  ("2014-08-20T10:20:30Z", false, []),
  ("2014-08-18T10:20:30Z", false, []),
  ("2014-08-15T10:20:30Z", false, []),
  ("2014-08-13T10:20:30Z", false, []),
  ("2014-08-12T10:20:30Z", false, []),
  ("2014-08-10T10:20:30Z", false, []),
  ("2014-08-08T10:20:30Z", true, [
    "yearly",
  ]),
])
